--- a/index.html
+++ b/index.html
@@ -16,19 +16,27 @@
 		</header>
 		<div>
 		<h2>PEOPLE</h2>
-		<ul class="people">	
-			<li><img class="round" src="img/SaraSoueidan.jpeg"><a href="#">Sara Soueidan</a>
+		<ul class="people">
+			<!-- edited by ignorantic -->
+			<li>
+				<a href="#"><img class="round" src="img/SaraSoueidan.jpeg"><span>Sara Soueidan</span></a>
 			</li>
-			<li><img class="round" src="img/RachelSmith.png"><a href="#">Rachel Smith</a>
+			<li>
+				<a href="#"><img class="round" src="img/RachelSmith.png"><span>Rachel Smith</span></a>
 			</li> 
-			<li><img class="round" src="img/PeterFinlan.jpeg"><a href="#">Peter Finlan</a>
+			<li>
+				<a href="#"><img class="round" src="img/PeterFinlan.jpeg"><span>Peter Finlan</span></a>
 			</li> 
-			<li><img class="round" src="img/PatrickCox.png"><a href="#">Patrick Cox</a>
+			<li>
+				<a href="#"><img class="round" src="img/PatrickCox.png"><span>Patrick Cox</span></a>
 			</li>
-			<li><img class="round" src="img/TimHolman.jpeg"><a href="#">Tim Holman</a>
+			<li>
+				<a href="#"><img class="round" src="img/TimHolman.jpeg"><span>Tim Holman</span></a>
 			</li> 
-			<li><img class="round" src="img/ShaunDona.jpeg"><a href="#">Shaun Dona</a>
-			</li>  
+			<li>
+				<a href="#"><img class="round" src="img/ShaunDona.jpeg"><span>Shaun Dona</span></a>
+			</li>
+			<!-- end of // edited by ignorantic -->
 		</ul>
 		</div>
 		<div>
